re PR target/33347 (gcc.c-torture/compile/20000804-1.c ICEs at -O3 -funroll-loops)

2007-09-28  Andrew Pinski  <andrew_pinski@playstation.sony.com>

        PR target/33347
        * config/spu/spu.c (spu_expand_insv): Call copy_rtx on the second
        argument to gen_selb.

From-SVN: r128874